[package]
name = "keybear-core"
version = "0.1.0"
authors = ["Thomas Versteeg <thomas@versteeg.email>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/keybear/keybear"
description = "Core methods & primitives for a Keybear client/server"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.36"
chacha20poly1305 = "0.7.1"
log = "0.4.11"
rand_core = { version = "0.5.0", default-features = false }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
x25519-dalek = { version = "1.1.0", features = ["serde"] }

[dev-dependencies]
tempfile = "3.1.0"
