[package]
name = "keybear-core"
version = "0.2.2"
authors = ["Thomas Versteeg <thomas@versteeg.email>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/keybear/keybear"
documentation = "https://docs.rs/keybear-core"
description = "Core methods & primitives for a Keybear client/server"
categories = ["encoding"]
keywords = ["keybear"]
include = ["src/**/*", "LICENSE", "README.md"]

[badges]
is-it-maintained-issue-resolution = { repository = "keybear/keybear-core" }
is-it-maintained-open-issues = { repository = "keybear/keybear-core" }

[dependencies]
anyhow = "1.0.37"
base64 = "0.13.0"
chacha20poly1305 = "0.7.1"
log = "0.4.11"
rand_core = { version = "0.5.0", default-features = false }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
x25519-dalek = { version = "1.1.0", features = ["serde"] }

[dev-dependencies]
tempfile = "3.1.0"
